# INFRA-study

./: README.md
week1/: .dockerignore  dockerfile  pyproject.toml
week1/week1/: main.py
