[tool.poetry]
name = "hasan-week1"
version = "0.1.0"
description = ""
authors = ["whattsup kim <whattsup_kim@naver.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"